[package]
name = "ren_os"
version = "0.1.0"
authors = ["ZacRen<self@zhichao.ren>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.6"
spin = "0.5.0"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]